# airflow-multirepo-deploy

./: .gitignore  .pre-commit-config.yaml  Readme.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
multirepo-deploy-plugin/: multirepo_deploy_plugin.py
multirepo-deploy-plugin/templates/: deploy.html  repos.html
multirepo-deploy-plugin/ui/: README.md  package.json  pnpm-lock.yaml
multirepo-deploy-plugin/ui/src/: dev.tsx  main.tsx  theme.ts
multirepo-deploy-plugin/ui/src/components/: AddRepoModal.tsx
multirepo-deploy-plugin/ui/src/context/colorMode/: index.ts  useColorMode.tsx
multirepo-deploy-plugin/ui/src/pages/: Deploy.tsx  RepoList.tsx
src/airflow_multirepo_deploy/: __init__.py  plugin.py
src/airflow_multirepo_deploy/ui/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
src/airflow_multirepo_deploy/ui/src/: main.tsx
src/airflow_multirepo_deploy/ui/src/components/: AddRepoModal.tsx
src/airflow_multirepo_deploy/ui/src/context/colorMode/: ColorModeProvider.tsx
src/airflow_multirepo_deploy/ui/src/pages/: Deploy.tsx
