[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "apache-airflow-multirepo-deploy"
dynamic = ["version"]
description = "Apache Airflow plugin for managing multi-repository DAG deployments"
readme = "Readme.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "apache-airflow-core>=3.0.0",
    "GitPython>=3.1.46",
    "PyJWT>=2.10.1",
    "cryptography>=45.0.0",
    "requests>=2.31.0",
]

[project.entry-points."airflow.plugins"]
multirepo_deploy = "airflow_multirepo_deploy:AirflowMultiRepoDeploymentPlugin"

[tool.hatch.version]
source = "vcs"
raw-options = { tag_regex = "^(?P<version>[0-9]+\\..*)" }

[tool.hatch.build.hooks.vcs]
version-file = "src/airflow_multirepo_deploy/_version.py"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/airflow_multirepo_deploy"]
artifacts = [
    "src/airflow_multirepo_deploy/ui/dist/**",
]

[tool.hatch.build.targets.sdist]
exclude = ["src/airflow_multirepo_deploy/ui/node_modules"]

[tool.ruff]
line-length = 120
